# Hot-Air-Controller

./: .gitignore  CMakeLists.txt  Makefile  README.md
PROJECT/: main.c  main.h
PROJECT/LCD/: lcd.c  lcd.h
PROJECT/LIB/: lib.c  lib.h
